--- a/src/components/theme-switcher/theme-switcher.module.css
+++ b/src/components/theme-switcher/theme-switcher.module.css
@@ -1,6 +1,7 @@
 .ThemeSwitcher {
   padding: 3px;
   width: fit-content;
+  height: fit-content;
   display: flex;
   border-radius: 9999px;
   border: 1px solid var(--inverted-light-grey);
